load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_cue",
    integrity = "sha256-OBfKBEDjt70qAm/XUyw67LZRbWoBK8CQDVrF8g8CiJs=",
    strip_prefix = "rules_cue-2bd58e894abe2dcf392bc1d6215954868aad6a09",
    url = "https://github.com/abcue/rules_cue/archive/2bd58e894abe2dcf392bc1d6215954868aad6a09.zip",
)

######################
# rules_cue setup #
######################
# Fetches the rules_cue dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_cue//cue:repositories.bzl", "cue_register_toolchains", "rules_cue_dependencies")

rules_cue_dependencies()

cue_register_toolchains(
    name = "cue",
    cue_version = "0.9.2",
)
